# bitwise

homework/: CMakeLists.txt  ast.c  ast.h  common.c  lexer.c  main.c
